Removed target _blank from links

--- a/app/templates/styleguide/forms.html
+++ b/app/templates/styleguide/forms.html
@@ -280,7 +280,7 @@ $(document).ready(function() {
             <hr>
 
             <h3 class="scrollspy-section"><a id="validation"></a>Validation</h3>
-            <p>Front-end form validation is handled by <a href="http://www.formvalidator.net/" target="_blank">jQuery Form Validator</a>. Back-end validation is handled by <a href="http://flask-wtf.readthedocs.org/en/latest/" target="_blank">Flask-WTF</a>. In order for the front-end validation to be rendered correctly, first you'll need to include the validator library and an initialization sattement in <code>{&#37; block scripts &#37;}</code> of your template. It is not included by default because most pages never have forms and don't need validation.</p>
+            <p>Front-end form validation is handled by <a href="http://www.formvalidator.net/">jQuery Form Validator</a>. Back-end validation is handled by <a href="http://flask-wtf.readthedocs.org/en/latest/">Flask-WTF</a>. In order for the front-end validation to be rendered correctly, first you'll need to include the validator library and an initialization sattement in <code>{&#37; block scripts &#37;}</code> of your template. It is not included by default because most pages never have forms and don't need validation.</p>
             <p>Here's an example of a field that checks if input is a valid email address when the field looses focus:</p>
             <div class="row">
                 <div class="one-half column">
@@ -320,7 +320,7 @@ $(document).ready(function() {
                     form.email.flags) &#125;&#125;
 
 &lt;/form&gt;</pre>
-            <p>The <code>render_field()</code> macro is describe in the  <a href="{{ url_for('styleguide.templating') }}#form-helpers">Form Helpers</a> section of this style guide. A full list of possible validators is available on the <a href="http://www.formvalidator.net/" target="_blank">jQuery Form Validator website</a>.</p>
+            <p>The <code>render_field()</code> macro is describe in the  <a href="{{ url_for('styleguide.templating') }}#form-helpers">Form Helpers</a> section of this style guide. A full list of possible validators is available on the <a href="http://www.formvalidator.net/">jQuery Form Validator website</a>.</p>
 
         </div>
 
