--- a/app/templates/styleguide/index.html
+++ b/app/templates/styleguide/index.html
@@ -25,10 +25,10 @@
             <p>This style guide is here to help new and current developers to keep the UI consistent. If you modify the styles, pease update this guide.</p>
             <p>Currently for frontend development we're using:</p>
             <ul>
-                <li><a href="http://getskeleton.com/" target="_blank">Skeleton</a> CSS boilerplate.</a></li>
-                <li><a href="https://useiconic.com/open" target="_blank">Open Iconic</a> icons</a></li>
+                <li><a href="http://getskeleton.com/">Skeleton</a> CSS boilerplate.</a></li>
+                <li><a href="https://useiconic.com/open">Open Iconic</a> icons</a></li>
                 <li>A few custom social media svg icons</li>
-                <li><a href="http://jinja.pocoo.org/" target="_blank">Jinja2</a> templating engine.</a></li>
+                <li><a href="http://jinja.pocoo.org/">Jinja2</a> templating engine.</a></li>
             </ul>
             <hr>
 
@@ -53,7 +53,7 @@
             <hr>
 
             <h3 class="scrollspy-section"><a id="jinja2"></a>Jinja2</h3>
-            <p>Jinja comes by default with <a href="http://flask.pocoo.org/" target="_blank">Flask</a>, which is the Python microframework we're using. Detailed documentation can be found <a href="http://jinja.pocoo.org/docs/dev/" target="_blank">here</a>.</p>
+            <p>Jinja comes by default with <a href="http://flask.pocoo.org/">Flask</a>, which is the Python microframework we're using. Detailed documentation can be found <a href="http://jinja.pocoo.org/docs/dev/">here</a>.</p>
             <p>Templating conventions used for this project are described in the <a href="{# url_for('styleguide/templating') #}">Templating section</a>.</p>
 
         </div>
