--- a/app/templates/styleguide/media_queries.html
+++ b/app/templates/styleguide/media_queries.html
@@ -21,7 +21,7 @@
         <div class="nine columns">
 
             <h2>Media Queries</h2>
-            <p>Media queries are borrowed directly <a href="http://getskeleton.com/#queries" target="_blank">from Skeleton</a>. All the queries are mobile-first, meaning they use <code>min-width</code> property.</p>
+            <p>Media queries are borrowed directly <a href="http://getskeleton.com/#queries">from Skeleton</a>. All the queries are mobile-first, meaning they use <code>min-width</code> property.</p>
             <p><strong>Note:</strong> The best way to structure the use of media queries is to create the queries near the relevant code. For example, if you wanted to change the styles for buttons on small devices, paste the mobile query code up in the buttons section and style it there.</p>
             <p>Below is a table of all available media queries:</p>
             <table>
