--- a/app/templates/styleguide/utilities.html
+++ b/app/templates/styleguide/utilities.html
@@ -21,7 +21,7 @@
         <div class="nine columns">
 
             <h2>Utilities</h2>
-            <p>In addition to Skeleton's helper utilites we've added several others to help with layout creation. Below is a full list of these classes, the details of their implementation can be found in <a href="{{ url_for('static', filename='css/custom.css') }}" target="_blank"><code>app/static/css/custom.css</code></a> under "Utilities" section.</p>
+            <p>In addition to Skeleton's helper utilites we've added several others to help with layout creation. Below is a full list of these classes, the details of their implementation can be found in <a href="{{ url_for('static', filename='css/custom.css') }}"><code>app/static/css/custom.css</code></a> under "Utilities" section.</p>
 
             <table>
                 <thead>
