--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -54,6 +54,10 @@ $(document).ready(function() {
                     {{ render_boolean(form.remember) }}
                 </div>
             </fieldset>
+            <p class="one-third column offset-by-three">
+                By accessing and using this service, you agree to the <a href="{{
+                    url_for('terms_of_service') }}">terms of service</a>.
+            </p>
         </div>
     </form>
     <hr>
