--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -4,14 +4,16 @@
 {% block scripts %}
 <script src="{{ url_for('static', filename='js/modal.js') }}"></script>
 <script>
-$('#stand-with-us').click(function() {
-    ga('send', {
-        hitType: 'event',
-        eventCategory: 'Causes',
-        eventAction: 'support',
-        eventLabel: 'Supported a cause'
+    $(document).ready(function() {
+        $('#stand-with-us').click(function() {
+            ga('send', {
+                hitType: 'event',
+                eventCategory: 'Causes',
+                eventAction: 'support',
+                eventLabel: 'Supported a cause'
+            });
+        });
     });
-});
 </script>
 {% endblock %}
 
