--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -211,18 +211,47 @@ a:hover {
 .masthead {
     background-size: cover;
     padding: 9rem 0;
-    height: 12vw;
+    height: 100px;
+}
+@media (min-width: 750px) {
+    .masthead {
+        background-size: cover;
+        padding: 9rem 0;
+        height: 12vw;
+    }
 }
 .masthead-title {
-    padding: 0 9rem;
-    margin-top: 12vw;
+    padding: 0 2rem;
+    margin-top: 5.8rem;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+}
+@media (min-width: 550px) {
+    .masthead-title {
+        padding: 0 2rem;
+        margin-top: 10.6rem;
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+    }
+}
+@media (min-width: 750px) {
+    .masthead-title {
+        padding: 0 9rem;
+        margin-top: 12vw;
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+    }
 }
 .masthead h1 {
     font-size: 5rem;
-    margin-top: 3rem;
+    margin-top: 2.4rem;
     margin-bottom:0;
     color: #fbfaf9;
+}
+@media (min-width: 750px) {
+    .masthead h1 {
+        font-size: 5rem;
+        margin-top: 3rem;
+        margin-bottom:0;
+        color: #fbfaf9;
+    }
 }
 .masthead h5 {
     font-size: 3rem;
