Overhauled cause header to work across all screen sizes

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -193,9 +193,16 @@ a:hover {
     height: 5rem;
     margin: 0.7rem 1rem 0 0;
 }
-.header .title,
 .header .button {
-    margin-top: 1.2rem;
+    margin-top: 1.5rem;
+}
+.header .title {
+    margin-top: 1.6rem;
+}
+@media (min-width: 550px) {
+    .header .title {
+        margin-top: 1.2rem;
+    }
 }
 .header .user {
     margin: 1.3em 1em 0 0;
@@ -208,63 +215,69 @@ a:hover {
 .content {
     /*margin-top: 9rem;*/
 }
-.masthead {
+.section {
+    padding: 8rem 0 7rem;
+    text-align: center;
+}
+.section-heading,
+.section-description {
+    margin-bottom: 1.2rem;
+}
+.hero {
     background-size: cover;
-    padding: 9rem 0;
-    height: 100px;
+    color: #fff;
 }
-@media (min-width: 750px) {
-    .masthead {
-        background-size: cover;
-        padding: 9rem 0;
-        height: 12vw;
-    }
+.hero-heading {
+    font-family: "Raleway-SemiBold", Helvetica, Arial, sans-serif;
+    text-shadow: 3px 3px 5px #000;
 }
-.masthead-title {
-    padding: 0 2rem;
-    margin-top: 5.8rem;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+.hero h5 {
+    text-shadow: 3px 3px 5px #000;
+}
+.hero-button {
+    box-shadow: 3px 3px 5px #000;
 }
 @media (min-width: 550px) {
-    .masthead-title {
-        padding: 0 2rem;
-        margin-top: 10.6rem;
-        background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+    .section {
+        padding: 12rem 0 11rem;
+    }
+    .hero {
+        padding-bottom: 12rem;
+        text-align: left;
+        height: 165px;
+    }
+    .hero-heading {
+        font-size: 2.4rem;
     }
 }
 @media (min-width: 750px) {
-    .masthead-title {
-        padding: 0 9rem;
-        margin-top: 12vw;
-        background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+    .hero {
+        height: 190px;
+        padding: 16rem 0 14rem;
+    }
+    .hero-heading {
+        font-size: 6.0rem;
+    }
+    .hero-button {
+        font-size: 3.0rem;
+        line-height: 4.7rem;
+        height: 5rem;
+    }
+    .section {
+        padding: 14rem 0 15rem;
+    }
+    .section-description {
+        max-width: 60%;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
-.masthead h1 {
-    font-size: 5rem;
-    margin-top: 2.4rem;
-    margin-bottom:0;
-    color: #fbfaf9;
-}
-@media (min-width: 750px) {
-    .masthead h1 {
-        font-size: 5rem;
-        margin-top: 3rem;
-        margin-bottom:0;
-        color: #fbfaf9;
+@media (min-width: 1000px) {
+    .section {
+        padding: 20rem 0 19rem;
     }
-}
-.masthead h5 {
-    font-size: 3rem;
-    margin-top: 4rem;
-    margin-bottom:0;
-    color: #fbfaf9;
-}
-@media (min-width: 750px) {
-    .masthead h1 {
-        font-size: 7.5rem;
-        margin-top: 0;
-        margin-bottom:0;
-        color: #fbfaf9;
+    .hero {
+        padding: 22rem 0;
     }
 }
 .support-action {
@@ -633,17 +646,8 @@ input[type="submit"]:disabled:focus {
     cursor: not-allowed;
     text-decoration: line-through;
 }
-.button-large {
-    height: 38px;
-    font-size: 11px;
-    line-height: 38px;
-}
-@media (min-width: 1000px) {
-    .button-large {
-        height: 7rem;
-        font-size: 1.5vw;
-        line-height: 7rem;
-    }
+.button img {
+    margin-top: 1em;
 }
 .selected {
     color: #1EAEDB;
@@ -731,6 +735,9 @@ input[type="submit"]:disabled:focus {
 }
 .u-add-margin-top {
     margin-top: 1em !important;
+}
+.u-add-margin-left {
+    margin-left: 1em;
 }
 .u-add-margin-right {
     margin-right: 1em;
