Change "Bsolid" to "Solid" (via SITE_NAME conf)

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -108,7 +108,7 @@
             <hr>
             <div class="row">
                 <div class="twelve columns u-text-center">
-                    <small>&copy; 2016 BSolid authors</small> |
+                    <small>&copy; 2016 {{ site_name }} authors</small> |
                     <a href="{{ url_for('terms_of_service') }}"><small>Terms of Service</small></a>
                 </div>
             </div>
