--- a/app/templates/styleguide/modals.html
+++ b/app/templates/styleguide/modals.html
@@ -25,7 +25,7 @@
             <h2>Modals</h2>
             <p>Modals are dialog boxes that are displayed on top of normal content. Click on the button below to view a demo modal.</p>
             <p>{{ render_modal('modal-demo', 'Modal Demo', 'Modal demo content', 'Click here to see a modal', 'button') }}</p>
-            <p><strong>Note:</strong> using modals breaks accessability. That is: screen readers will not interpret them correctly.</p>
+            <p><strong>Note:</strong> using modals breaks accessibility. That is: screen readers will not interpret them correctly.</p>
             <hr>
             <p>You can either render modals manually or <a href="{{ url_for('styleguide.templating') }}#modal-helpers">use the included macro</a>. Below is an example manual implementation. First, import <code>modal.js</code> file inside <code>&#123;&#37; block scripts &#37;&#125;</code>.</p>
             <pre>
