--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -225,17 +225,37 @@ a:hover {
 }
 .hero {
     background-size: cover;
-    color: #fff;
 }
 .hero-heading {
     font-family: "Raleway-SemiBold", Helvetica, Arial, sans-serif;
-    text-shadow: 3px 3px 5px #000;
-}
-.hero h5 {
-    text-shadow: 3px 3px 5px #000;
+    margin: 1rem 2rem 2rem 2rem;
 }
 .hero-button {
-    box-shadow: 3px 3px 5px #000;
+    margin: 0 2rem 4rem 2rem;
+}
+.glass {
+    position: relative;
+    background-color: #fff;
+    z-index: 0;
+    overflow: hidden;
+    display: inline-block;
+    box-shadow: 0 0 10px #000;
+}
+.glass::before {
+    width: 100%;
+    height: 100%;
+    margin-left: -50%;
+    overflow: hidden;
+    z-index: -1;
+    display: inline-block;
+    position: absolute;
+    content: ' ';
+    background: url(/static/images/header-amysbread.png) no-repeat fixed 0% 65px;
+    -webkit-filter: url('#blur');
+    -webkit-filter: blur(5px);
+    filter: url('#blur');
+    filter: blur(5px);
+    opacity: 0.5;
 }
 @media (min-width: 550px) {
     .section {
@@ -249,6 +269,9 @@ a:hover {
     .hero-heading {
         font-size: 2.4rem;
     }
+    .glass::before {
+        margin-left: 0;
+    }
 }
 @media (min-width: 750px) {
     .hero {
@@ -259,7 +282,7 @@ a:hover {
         font-size: 6.0rem;
     }
     .hero-button {
-        font-size: 3.0rem;
+        font-size: 2rem;
         line-height: 4.7rem;
         height: 5rem;
     }
