--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -54,8 +54,7 @@ $(document).ready(function() {
             </div>
             <div class="three columns">
                 <small class="small-block">
-                    By accessing and using this service, you agree to the <a href="{{
-                        url_for('terms_of_service') }}">terms of service</a>.
+                    By accessing and using this service, you agree to the <a href="/terms_of_service">terms of service</a>.
                 </small>
             </div>
         </div>
