--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -47,15 +47,17 @@ $(document).ready(function() {
             </fieldset>
         </div>
         <div class="row">
-            <fieldset>
-                <div class="three columns offset-by-three">
+            <div class="three columns offset-by-three">
+                <fieldset>
                     <input id="login" class="button button-primary u-mobile-fixed-bottom" type="submit" value="Log In">
-                </div>
-            </fieldset>
-            <p class="one-third column offset-by-three">
-                By accessing and using this service, you agree to the <a href="{{
-                    url_for('terms_of_service') }}">terms of service</a>.
-            </p>
+                </fieldset>
+            </div>
+            <div class="three columns">
+                <small class="small-block">
+                    By accessing and using this service, you agree to the <a href="{{
+                        url_for('terms_of_service') }}">terms of service</a>.
+                </small>
+            </div>
         </div>
     </form>
     <hr>
